--- a/index.html
+++ b/index.html
@@ -3,280 +3,231 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EasyDrive Admin Dashboard</title>
-<!-- Include CDN libraries -->
+<title>EasyDrive Dashboard</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <style>
-    body { font-family: Arial, sans-serif; margin: 0; display: flex; background: #f4f4f4; }
-    .sidebar { width: 280px; background: #2c3e50; color: white; height: 100vh; padding: 20px; box-sizing: border-box; }
-    .sidebar h2 { margin-top: 0; }
-    .sidebar section { margin-bottom: 30px; }
-    .sidebar section h3 { font-size: 16px; margin-bottom: 10px; }
-    .sidebar .panel { background: #34495e; padding: 10px; border-radius: 5px; }
-
-    .main { flex: 1; padding: 20px; overflow-y: scroll; }
-    .metrics { display: flex; gap: 20px; margin-bottom: 20px; }
-    .card { background: white; padding: 20px; border-radius: 5px; flex: 1; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .card h3 { margin: 0; font-size: 16px; }
-    .card p { font-size: 24px; margin-top: 10px; }
-
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; background: white; }
-    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-    th { background: #2980b9; color: white; }
-    tr.completed { background: #d4edda; }
-    tr.upcoming { background: #d1ecf1; }
-    tr.cancelled { background: #f8d7da; }
-
-    .calendar { margin-top: 20px; background: white; padding: 20px; border-radius: 5px; }
-    .booking-actions button { margin-right: 5px; }
-
-    /* Modals */
-    .modal { display: none; position: fixed; top:0; left:0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; }
-    .modal-content { background: white; padding: 20px; border-radius: 5px; width: 500px; max-width: 90%; }
-    .modal-header { display: flex; justify-content: space-between; align-items: center; }
-    .close { cursor: pointer; }
+  body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f4;}
+  .navbar { background:#004080; color:white; padding:10px; display:flex; justify-content:space-between; align-items:center;}
+  .sidebar { width:250px; background:#fff; height:100vh; position:fixed; top:0; left:0; padding:20px; box-shadow:2px 0 5px rgba(0,0,0,0.1);}
+  .main { margin-left:270px; padding:20px;}
+  .card { background:white; padding:15px; margin-bottom:15px; box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+  table { width:100%; border-collapse:collapse; margin-top:10px;}
+  th, td { border:1px solid #ddd; padding:8px; text-align:left;}
+  th { background:#004080; color:white;}
+  .green { color:green; font-weight:bold;}
+  .blue { color:#1e90ff; font-weight:bold;}
+  .red { color:red; font-weight:bold;}
+  .hidden { display:none; }
+  .role-select { margin:20px;}
+  button { padding:5px 10px; margin-right:5px; cursor:pointer;}
 </style>
 </head>
 <body>
 
-<div class="sidebar">
-    <h2>EasyDrive Admin</h2>
-
-    <section>
-        <h3>Cash Balances</h3>
-        <div class="panel">
-            <p>CASH: ₱<span id="cashBalance">3436</span></p>
-            <p>BPI: ₱<span id="bpiBalance">9159.33</span></p>
-            <p>GCASH: ₱<span id="gcashBalance">4367.75</span></p>
-            <p>GoTyme: ₱<span id="gotymeBalance">0</span></p>
-            <p><strong>Total: ₱<span id="totalCash">16963.08</span></strong></p>
-        </div>
-    </section>
-
-    <section>
-        <h3>Expenses (Car-related)</h3>
-        <div class="panel">
-            <p>Gas: ₱<span id="expenseGas">5000</span></p>
-            <p>Service: ₱<span id="expenseService">3000</span></p>
-            <p>Car Wash: ₱<span id="expenseWash">1000</span></p>
-            <p>Promotions: ₱<span id="expensePromo">500</span></p>
-            <p><strong>Total Expenses: ₱<span id="totalExpenses">9500</span></strong></p>
-        </div>
-    </section>
-
-    <section>
-        <h3>Pending Approvals</h3>
-        <div class="panel" id="pendingApprovalsPanel">
-            <p>No pending approvals.</p>
-        </div>
-    </section>
+<div class="role-select">
+  <label>Select Role: </label>
+  <select id="roleSelect">
+    <option value="">-- Choose Role --</option>
+    <option value="admin">Admin</option>
+    <option value="client">Client</option>
+    <option value="partner">Partner</option>
+  </select>
 </div>
 
-<div class="main">
+<!-- Admin / Partner / Client Panels -->
+<div id="dashboardPanel" class="hidden">
+  <div class="navbar">
+    <div>EasyDrive Dashboard</div>
+    <div id="currentRole"></div>
+  </div>
 
-    <div class="metrics">
-        <div class="card">
-            <h3>Total Bookings (Month)</h3>
-            <p id="totalBookings">0</p>
-        </div>
-        <div class="card">
-            <h3>Total Income (Month)</h3>
-            <p id="totalIncome">₱0</p>
-        </div>
-        <div class="card">
-            <h3>Total Expenses (Month)</h3>
-            <p id="totalExpenseMain">₱0</p>
-        </div>
-        <div class="card">
-            <h3>Vehicles Rented</h3>
-            <p id="vehiclesRented">0</p>
-        </div>
+  <div class="sidebar">
+    <h3>Quick Stats</h3>
+    <div>Total Income: ₱<span id="totalIncome">0</span></div>
+    <div>Total Expense: ₱<span id="totalExpense">0</span></div>
+    <div>Active Bookings: <span id="activeBookings">0</span></div>
+    <div>Partner Applications: <span id="pendingPartners">0</span></div>
+  </div>
+
+  <div class="main">
+    <div class="card">
+      <h3>Top 5 Most Rented Vehicles</h3>
+      <canvas id="topVehiclesChart" height="200"></canvas>
     </div>
 
     <div class="card">
-        <h3>Top 5 Most Rented Vehicles</h3>
-        <canvas id="topVehiclesChart"></canvas>
-    </div>
-
-    <table id="recentBookings">
+      <h3>Recent Bookings</h3>
+      <table id="bookingsTable">
         <thead>
-            <tr>
-                <th>Client Name</th>
-                <th>Vehicle</th>
-                <th>Pickup</th>
-                <th>Return</th>
-                <th>Duration</th>
-                <th>Total Days Rented</th>
-                <th>Status</th>
-                <th>Freebies (Admin Only)</th>
-                <th>Actions</th>
-            </tr>
+          <tr>
+            <th>Client Name</th>
+            <th>Vehicle</th>
+            <th>Pickup</th>
+            <th>Return</th>
+            <th>Duration</th>
+            <th>Total Days Rented</th>
+            <th>Status</th>
+            <th class="admin-only">Freebies</th>
+            <th>Actions</th>
+          </tr>
         </thead>
-        <tbody>
-        </tbody>
-    </table>
-
-    <div class="calendar">
-        <h3>Booking Calendar</h3>
-        <input type="text" id="calendarInput" placeholder="Select Date Range" />
-        <button id="addBookingBtn">Add Booking</button>
+        <tbody></tbody>
+      </table>
     </div>
 
-</div>
-
-<!-- Booking Modal -->
-<div class="modal" id="bookingModal">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h3>Add Booking</h3>
-            <span class="close" id="closeModal">&times;</span>
-        </div>
-        <div class="modal-body">
-            <form id="bookingForm">
-                <label>Client Name: <input type="text" id="clientName" required></label><br><br>
-                <label>Vehicle: <input type="text" id="vehicleName" required></label><br><br>
-                <label>Pickup Date & Time: <input type="datetime-local" id="pickupDate" required></label><br><br>
-                <label>Return Date & Time: <input type="datetime-local" id="returnDate" required></label><br><br>
-                <label>Base Rate (₱): <input type="number" id="baseRate" required></label><br><br>
-                <label>Extra Fees (₱): <input type="number" id="extraFees" value="0"></label><br><br>
-                <label>Partner Unit? <input type="checkbox" id="isPartner"></label><br><br>
-                <button type="submit">Save Booking</button>
-            </form>
-        </div>
+    <div class="card client-only">
+      <h3>Book a Vehicle</h3>
+      <form id="bookingForm">
+        <label>Client Name:</label><br>
+        <input type="text" id="clientName" required><br>
+        <label>Vehicle:</label><br>
+        <select id="vehicleSelect"></select><br>
+        <label>Pickup Date:</label><br>
+        <input type="date" id="pickupDate" required><br>
+        <label>Return Date:</label><br>
+        <input type="date" id="returnDate" required><br>
+        <button type="submit">Submit Booking</button>
+      </form>
     </div>
+
+    <div class="card partner-only">
+      <h3>Submit Your Vehicle</h3>
+      <form id="partnerForm">
+        <label>Vehicle Name/Model:</label><br>
+        <input type="text" id="partnerVehicle" required><br>
+        <label>Plate Number:</label><br>
+        <input type="text" id="partnerPlate" required><br>
+        <button type="submit">Submit Vehicle</button>
+      </form>
+    </div>
+
+  </div>
 </div>
 
 <script>
-// Sample data storage
+const roleSelect = document.getElementById('roleSelect');
+const dashboardPanel = document.getElementById('dashboardPanel');
+const currentRole = document.getElementById('currentRole');
+
 let bookings = [];
-let vehicleUsage = {};
-let vehicleCounts = {};
-
-// Cash & Expenses
-let totalExpenses = 9500;
+let vehicles = [
+  {name:'Toyota Vios', plate:'ABC123', rented:3},
+  {name:'Honda City', plate:'DEF456', rented:5},
+  {name:'Toyota Avanza', plate:'GHI789', rented:2},
+  {name:'Mitsubishi Montero', plate:'JKL012', rented:1},
+  {name:'Suzuki Ertiga', plate:'MNO345', rented:4},
+];
+let partners = [];
 let totalIncome = 0;
+let totalExpense = 0;
 
-function updateMetrics() {
-    document.getElementById('totalBookings').innerText = bookings.length;
-    document.getElementById('totalIncome').innerText = '₱' + totalIncome.toFixed(2);
-    document.getElementById('totalExpenseMain').innerText = '₱' + totalExpenses.toFixed(2);
+roleSelect.addEventListener('change', ()=>{
+  const role = roleSelect.value;
+  if(!role) { dashboardPanel.classList.add('hidden'); return; }
+  dashboardPanel.classList.remove('hidden');
+  currentRole.innerText = role.toUpperCase();
 
-    let rentedVehicles = bookings.filter(b => b.status !== 'Cancelled').length;
-    document.getElementById('vehiclesRented').innerText = rentedVehicles;
+  // Show/hide sections
+  document.querySelectorAll('.client-only').forEach(e=>e.style.display=(role==='client'?'block':'none'));
+  document.querySelectorAll('.partner-only').forEach(e=>e.style.display=(role==='partner'?'block':'none'));
+  document.querySelectorAll('.admin-only').forEach(e=>e.style.display=(role==='admin'?'table-cell':'none'));
 
-    // Update Top 5 Vehicles
-    vehicleCounts = {};
-    bookings.forEach(b => {
-        if(b.status !== 'Cancelled') {
-            vehicleCounts[b.vehicle] = (vehicleCounts[b.vehicle] || 0) + 1;
-        }
-    });
-    let sortedVehicles = Object.entries(vehicleCounts).sort((a,b) => b[1]-a[1]).slice(0,5);
-    let labels = sortedVehicles.map(v => v[0]);
-    let data = sortedVehicles.map(v => v[1]);
-
-    topVehiclesChart.data.labels = labels;
-    topVehiclesChart.data.datasets[0].data = data;
-    topVehiclesChart.update();
-}
-
-// Freebies logic
-function getFreebie(totalDays){
-    if(totalDays >= 30) return 'T-shirt';
-    if(totalDays >= 15) return 'Payong';
-    if(totalDays >= 7) return 'Tote Bag';
-    if(totalDays >= 1) return 'Keychain';
-    return '';
-}
-
-function refreshBookingsTable(){
-    let tbody = document.querySelector('#recentBookings tbody');
-    tbody.innerHTML = '';
-    bookings.forEach((b,i) => {
-        let tr = document.createElement('tr');
-        tr.className = b.status.toLowerCase();
-        tr.innerHTML = `
-            <td>${b.client}</td>
-            <td>${b.vehicle}</td>
-            <td>${b.pickup}</td>
-            <td>${b.return}</td>
-            <td>${b.duration} hrs</td>
-            <td>${b.totalDays}</td>
-            <td>${b.status}</td>
-            <td>${b.freebie}</td>
-            <td class="booking-actions">
-                <button onclick="approveBooking(${i})">Approve</button>
-                <button onclick="rejectBooking(${i})">Reject</button>
-            </td>
-        `;
-        tbody.appendChild(tr);
-    });
-}
-
-function approveBooking(index){
-    bookings[index].status = 'Completed';
-    alert(`Booking approved. Freebie: ${bookings[index].freebie || 'None'}`);
-    totalIncome += bookings[index].baseRate + bookings[index].extraFees;
-    updateMetrics();
-    refreshBookingsTable();
-}
-
-function rejectBooking(index){
-    bookings[index].status = 'Cancelled';
-    alert('Booking rejected.');
-    updateMetrics();
-    refreshBookingsTable();
-}
-
-// Top 5 Pie Chart
-const ctx = document.getElementById('topVehiclesChart').getContext('2d');
-const topVehiclesChart = new Chart(ctx, {
-    type: 'pie',
-    data: {
-        labels: [],
-        datasets: [{
-            label: 'Top 5 Vehicles',
-            data: [],
-            backgroundColor: ['#3498db','#e74c3c','#f1c40f','#2ecc71','#9b59b6']
-        }]
-    },
-    options: { responsive: true }
+  updateDashboard();
 });
 
-// Booking Modal Logic
-const modal = document.getElementById('bookingModal');
-const addBtn = document.getElementById('addBookingBtn');
-const closeModal = document.getElementById('closeModal');
-addBtn.onclick = ()=>{ modal.style.display='flex'; }
-closeModal.onclick = ()=>{ modal.style.display='none'; }
-window.onclick = (e)=>{ if(e.target==modal) modal.style.display='none'; }
+function updateDashboard(){
+  // Stats
+  totalIncome = bookings.reduce((sum,b)=>sum+b.amount,0);
+  totalExpense = bookings.reduce((sum,b)=>sum+b.expense,0);
+  document.getElementById('totalIncome').innerText = totalIncome;
+  document.getElementById('totalExpense').innerText = totalExpense;
+  document.getElementById('activeBookings').innerText = bookings.filter(b=>b.status==='Upcoming').length;
+  document.getElementById('pendingPartners').innerText = partners.filter(p=>!p.approved).length;
 
-// Booking Form Submission
-document.getElementById('bookingForm').onsubmit = function(e){
-    e.preventDefault();
-    let client = document.getElementById('clientName').value;
-    let vehicle = document.getElementById('vehicleName').value;
-    let pickup = document.getElementById('pickupDate').value;
-    let ret = document.getElementById('returnDate').value;
-    let baseRate = parseFloat(document.getElementById('baseRate').value);
-    let extraFees = parseFloat(document.getElementById('extraFees').value);
-    let isPartner = document.getElementById('isPartner').checked;
+  // Top Vehicles Pie Chart
+  const ctx = document.getElementById('topVehiclesChart').getContext('2d');
+  const sorted = vehicles.sort((a,b)=>b.rented-a.rented).slice(0,5);
+  const data = {
+    labels: sorted.map(v=>v.name),
+    datasets:[{
+      data: sorted.map(v=>v.rented),
+      backgroundColor:['#004080','#1e90ff','#ff8c00','#32cd32','#ff1493']
+    }]
+  };
+  if(window.vehicleChart) window.vehicleChart.destroy();
+  window.vehicleChart = new Chart(ctx,{type:'pie',data:data});
 
-    let duration = (new Date(ret) - new Date(pickup)) / (1000*60*60); // hours
-    let totalDays = Math.ceil(duration/24);
-    let freebie = getFreebie(totalDays);
+  // Bookings Table
+  const tbody = document.querySelector('#bookingsTable tbody');
+  tbody.innerHTML='';
+  bookings.forEach((b,i)=>{
+    const tr=document.createElement('tr');
+    tr.innerHTML=`
+      <td>${b.client}</td>
+      <td>${b.vehicle}</td>
+      <td>${b.pickup}</td>
+      <td>${b.return}</td>
+      <td>${b.duration} days</td>
+      <td>${b.totalDays}</td>
+      <td class="${b.status==='Completed'?'green':b.status==='Upcoming'?'blue':'red'}">${b.status}</td>
+      <td class="admin-only">${b.freebie || ''}</td>
+      <td>
+        ${roleSelect.value==='admin'?`<button onclick="approveBooking(${i})">Approve</button><button onclick="rejectBooking(${i})">Reject</button>`:''}
+      </td>
+    `;
+    tbody.appendChild(tr);
+  });
 
-    bookings.push({client, vehicle, pickup, return: ret, baseRate, extraFees, status:'Upcoming', duration, totalDays, freebie, isPartner});
-    modal.style.display='none';
-
-    refreshBookingsTable();
-    updateMetrics();
+  // Vehicle Select for client
+  const vehicleSelect = document.getElementById('vehicleSelect');
+  vehicleSelect.innerHTML='';
+  vehicles.forEach(v=>{
+    vehicleSelect.innerHTML+=`<option value="${v.name}">${v.name}</option>`;
+  });
 }
 
-// Initialize Flatpickr
-flatpickr('#calendarInput', {mode:'range'});
+// Booking Form Submission
+document.getElementById('bookingForm')?.addEventListener('submit',(e)=>{
+  e.preventDefault();
+  const client = document.getElementById('clientName').value;
+  const vehicle = document.getElementById('vehicleSelect').value;
+  const pickup = document.getElementById('pickupDate').value;
+  const ret = document.getElementById('returnDate').value;
+  const duration = (new Date(ret)-new Date(pickup))/(1000*60*60*24)+1;
+  const totalDays = duration;
+  let freebie='';
+  if(totalDays>=30) freebie='T-shirt';
+  else if(totalDays>=15) freebie='Payong';
+  else if(totalDays>=7) freebie='Tote Bag';
+  else if(totalDays>=1) freebie='Keychain';
+
+  bookings.push({client,vehicle,pickup,return:ret,duration,totalDays,status:'Upcoming',amount:1000*duration,expense:300*duration,freebie});
+  const v = vehicles.find(vv=>vv.name===vehicle); if(v) v.rented++;
+  updateDashboard();
+  alert('Booking submitted! Waiting for admin approval.');
+});
+
+// Partner Form Submission
+document.getElementById('partnerForm')?.addEventListener('submit',(e)=>{
+  e.preventDefault();
+  const name = document.getElementById('partnerVehicle').value;
+  const plate = document.getElementById('partnerPlate').value;
+  partners.push({name,plate,approved:false});
+  updateDashboard();
+  alert('Partner vehicle submitted! Waiting for admin approval.');
+});
+
+// Admin Approve/Reject
+function approveBooking(i){
+  bookings[i].status='Completed';
+  updateDashboard();
+  alert(`Booking for ${bookings[i].client} approved!`);
+}
+function rejectBooking(i){
+  bookings[i].status='Cancelled';
+  updateDashboard();
+  alert(`Booking for ${bookings[i].client} rejected!`);
+}
 </script>
 
 </body>
