--- a/index.html
+++ b/index.html
@@ -47,12 +47,20 @@ input[type="file"]{ display:none;}
 </head>
 <body>
 
+<!-- Login Screen -->
+<div id="loginScreen" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#ecf0f1;display:flex;align-items:center;justify-content:center;z-index:9999;">
+  <div style="background:#fff;padding:30px;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,0.2);text-align:center;">
+    <h2>Login as:</h2>
+    <button onclick="loginAs('admin')" style="margin:10px;padding:10px 20px;">Admin</button>
+    <button onclick="loginAs('client')" style="margin:10px;padding:10px 20px;">Renter</button>
+    <button onclick="loginAs('partner')" style="margin:10px;padding:10px 20px;">Partner</button>
+  </div>
+</div>
+
 <!-- Sidebar -->
 <div class="sidebar" id="sidebar">
     <h2>EasyDrive</h2>
-    <ul id="menu">
-        <!-- Menu items will be injected by JS based on role -->
-    </ul>
+    <ul id="menu"></ul>
 </div>
 
 <!-- Main Panel -->
@@ -76,13 +84,29 @@ input[type="file"]{ display:none;}
 </div>
 
 <script>
-// === User Role & Login (demo) ===
-let currentRole = "admin"; // admin / client / partner
-let userName = "Admin Micah";
+// === Login Functionality ===
+let currentRole = "";
+let userName = "";
 
-document.getElementById('userName').innerText = "Welcome, " + userName;
+function loginAs(role){
+    currentRole = role;
+    if(role==="admin") userName="Admin Micah";
+    else if(role==="client") userName="Renter Juan";
+    else if(role==="partner") userName="Partner Pedro";
 
-// Sidebar menu based on role
+    document.getElementById('userName').innerText = "Welcome, " + userName;
+    document.getElementById('loginScreen').style.display="none";
+    loadSidebar(currentRole);
+    loadStats(currentRole);
+    loadContent("Dashboard");
+}
+
+// === Logout Function ===
+function logout(){
+    location.reload();
+}
+
+// === Sidebar Menu ===
 const sidebarMenu = document.getElementById('menu');
 const mainContent = document.getElementById('mainContent');
 const adminStats = document.getElementById('adminStats');
@@ -104,16 +128,9 @@ const expensesData = [
     { cash: 1000, bpi:0, gcash:1500 }
 ];
 
-const netCashflowData = [
-    { date:"2025-08-16", agreementNo:"NC001", category:"Rental Payment", description:"Toyota Vios 1-day rental", mipad:0, receivable:1899, rfid:0, rfidServiceFee:0, cash:0, bpi:1899, gcash:0 },
-    { date:"2025-08-17", agreementNo:"NC002", category:"RFID Load", description:"RFID top-up", mipad:0, receivable:0, rfid:500, rfidServiceFee:10, cash:500, bpi:0, gcash:0 }
-];
-
 const cashRecords = { cash:5000, gcash:12000, bpi:25000, gotyme:8000, maya:7000, landbank:15000 };
 
 // === Functions ===
-
-// Sidebar
 function loadSidebar(role){
     sidebarMenu.innerHTML="";
     menus[role].forEach(item=>{
@@ -124,32 +141,14 @@ function loadSidebar(role){
     });
 }
 
-// Admin stats
-function loadStats(role){
-    if(role==="admin"){
-        const totalIncome = calculateTotalIncome();
-        const totalExpenses = calculateTotalExpenses();
-        const netRevenue = totalIncome - totalExpenses;
-        adminStats.innerHTML=`<div>Total Income: ₱${totalIncome.toLocaleString()}</div>
-                              <div>Total Expenses: ₱${totalExpenses.toLocaleString()}</div>
-                              <div>Net Revenue: ₱${netRevenue.toLocaleString()}</div>`;
-    }else{ adminStats.innerHTML=""; }
-}
-
-// Calculate totals
 function calculateTotalIncome(){ 
-    return incomeData.reduce((sum,b)=>{
-        return sum + (b.cash + b.bpi + b.gcash + b.deliveryFee + b.carWash + b.fuelDeficit + b.cashIncomeRFID + b.loadRFID + b.reservationFee + b.deposit);
-    },0);
+    return incomeData.reduce((sum,b)=> sum + (b.cash+b.bpi+b.gcash+b.deliveryFee+b.carWash+b.fuelDeficit+b.cashIncomeRFID+b.loadRFID+b.reservationFee+b.deposit),0);
 }
 
 function calculateTotalExpenses(){
-    return expensesData.reduce((sum,e)=>{
-        return sum + (e.cash + e.bpi + e.gcash);
-    },0);
+    return expensesData.reduce((sum,e)=> sum + (e.cash+e.bpi+e.gcash),0);
 }
 
-// Net Cashflow per account
 function calculateNetCashflow(){
     const incomeTotals = { cash:0,bpi:0,gcash:0 };
     const expenseTotals = { cash:0,bpi:0,gcash:0 };
@@ -158,77 +157,101 @@ function calculateNetCashflow(){
     return { cash:incomeTotals.cash-expenseTotals.cash, bpi:incomeTotals.bpi-expenseTotals.bpi, gcash:incomeTotals.gcash-expenseTotals.gcash };
 }
 
-// Updated Cash Records
 function updateCashRecords(){
     const net = calculateNetCashflow();
     return { ...cashRecords, cash:cashRecords.cash+net.cash, bpi:cashRecords.bpi+net.bpi, gcash:cashRecords.gcash+net.gcash };
 }
 
-// Total Cash on Hand
 function calculateTotalCashOnHand(){
     const updated = updateCashRecords();
-    return updated.cash + updated.bpi + updated.gcash + updated.gotyme + updated.maya + updated.landbank;
+    return updated.cash+updated.bpi+updated.gcash+updated.gotyme+updated.maya+updated.landbank;
 }
 
-// === Content Load ===
+function loadStats(role){
+    if(role==="admin"){
+        const totalIncome = calculateTotalIncome();
+        const totalExpenses = calculateTotalExpenses();
+        const netRevenue = totalIncome - totalExpenses;
+        adminStats.innerHTML=`<div>Total Income: ₱${totalIncome.toLocaleString()}</div>
+                              <div>Total Expenses: ₱${totalExpenses.toLocaleString()}</div>
+                              <div>Net Revenue: ₱${netRevenue.toLocaleString()}</div>`;
+    } else { adminStats.innerHTML=""; }
+}
+
+// === Logo Change ===
+document.getElementById('logo').addEventListener('click',()=> document.getElementById('logoInput').click());
+document.getElementById('logoInput').addEventListener('change',(e)=>{
+    if(e.target.files && e.target.files[0]){
+        document.getElementById('logo').src = URL.createObjectURL(e.target.files[0]);
+    }
+});
+
+// === Content Loading ===
 function loadContent(menuItem){
     let html="";
     if(currentRole==="admin"){
-        if(menuItem==="Dashboard"){
-            html="<h2>Welcome to EasyDrive Admin Dashboard</h2>";
-        }else if(menuItem==="Bookings"){
-            html=`<h2>Bookings Overview</h2>
-            <table>
-                <tr><th>Client</th><th>Vehicle</th><th>Schedule</th><th>Status</th><th>Action</th></tr>
-                <tr><td>Juan Dela Cruz</td><td>Toyota Vios</td><td>2025-08-16</td><td>Pending</td>
-                <td><button class="approve">Approve</button> <button class="reject">Reject</button></td></tr>
-            </table>`;
-        }else if(menuItem==="Income"){
-            html=`<h2>Income Table</h2>
-            <table>
-                <tr>
-                    <th>Cash</th><th>BPI</th><th>GCash</th><th>Delivery Fee</th><th>Car Wash</th><th>Fuel Deficit</th><th>Reservation</th><th>Deposit</th><th>Total</th>
-                </tr>`;
+        if(menuItem==="Dashboard"){ html="<h2>Welcome to EasyDrive Admin Dashboard</h2>"; }
+        else if(menuItem==="Bookings"){
+            html=`<h2>Bookings Overview</h2><table><tr><th>Client</th><th>Vehicle</th><th>Schedule</th><th>Status</th><th>Action</th></tr>
+            <tr><td>Juan Dela Cruz</td><td>Toyota Vios</td><td>2025-08-16</td><td>Pending</td>
+            <td><button class="approve">Approve</button> <button class="reject">Reject</button></td></tr></table>`;
+        }
+        else if(menuItem==="Income"){
+            html=`<h2>Income Table</h2><table>
+            <tr><th>Cash</th><th>BPI</th><th>GCash</th><th>Delivery Fee</th><th>Car Wash</th><th>Fuel Deficit</th><th>Reservation</th><th>Deposit</th><th>Total</th></tr>`;
             incomeData.forEach(b=>{
-                const total = b.cash+b.bpi+b.gcash+b.deliveryFee+b.carWash+b.fuelDeficit+b.reservationFee+b.deposit;
-                html+=`<tr>
-                    <td>₱${b.cash}</td><td>₱${b.bpi}</td><td>₱${b.gcash}</td>
-                    <td>₱${b.deliveryFee}</td><td>₱${b.carWash}</td><td>₱${b.fuelDeficit}</td>
-                    <td>₱${b.reservationFee}</td><td>₱${b.deposit}</td><td>₱${total}</td>
-                </tr>`;
+                const total=b.cash+b.bpi+b.gcash+b.deliveryFee+b.carWash+b.fuelDeficit+b.reservationFee+b.deposit;
+                html+=`<tr><td>₱${b.cash}</td><td>₱${b.bpi}</td><td>₱${b.gcash}</td><td>₱${b.deliveryFee}</td>
+                <td>₱${b.carWash}</td><td>₱${b.fuelDeficit}</td><td>₱${b.reservationFee}</td><td>₱${b.deposit}</td><td>₱${total}</td></tr>`;
             });
             html+=`<tr><td colspan="8" style="text-align:right;"><strong>Total Income</strong></td><td>₱${calculateTotalIncome()}</td></tr></table>`;
-        }else if(menuItem==="Expenses"){
-            html=`<h2>Expenses Table</h2>
-            <table><tr><th>Cash</th><th>BPI</th><th>GCash</th><th>Amount</th></tr>`;
+        }
+        else if(menuItem==="Expenses"){
+            html=`<h2>Expenses Table</h2><table><tr><th>Cash</th><th>BPI</th><th>GCash</th><th>Amount</th></tr>`;
             expensesData.forEach(e=>{
                 const amt=e.cash+e.bpi+e.gcash;
                 html+=`<tr><td>₱${e.cash}</td><td>₱${e.bpi}</td><td>₱${e.gcash}</td><td>₱${amt}</td></tr>`;
             });
             html+=`<tr><td colspan="3" style="text-align:right;"><strong>Total Expenses</strong></td><td>₱${calculateTotalExpenses()}</td></tr></table>`;
-        }else if(menuItem==="Net Cashflow"){
+        }
+        else if(menuItem==="Net Cashflow"){
             const net = calculateNetCashflow();
-            html=`<h2>Net Cashflow</h2>
-            <table><tr><th>Cash</th><th>BPI</th><th>GCash</th></tr>
+            html=`<h2>Net Cashflow</h2><table><tr><th>Cash</th><th>BPI</th><th>GCash</th></tr>
             <tr><td>₱${net.cash}</td><td>₱${net.bpi}</td><td>₱${net.gcash}</td></tr></table>`;
-        }else if(menuItem==="Revenue"){
-            const revenue = calculateTotalIncome()-calculateTotalExpenses();
-            html=`<h2>Revenue Summary</h2>
-            <table><tr><th>Total Income</th><th>Total Expenses</th><th>Net Revenue</th></tr>
+        }
+        else if(menuItem==="Revenue"){
+            const revenue=calculateTotalIncome()-calculateTotalExpenses();
+            html=`<h2>Revenue Summary</h2><table><tr><th>Total Income</th><th>Total Expenses</th><th>Net Revenue</th></tr>
             <tr><td>₱${calculateTotalIncome()}</td><td>₱${calculateTotalExpenses()}</td><td>₱${revenue}</td></tr></table>`;
-        }else if(menuItem==="Cash Records"){
-            const updated = updateCashRecords();
-            html=`<h2>Cash Records</h2>
-            <table>
+        }
+        else if(menuItem==="Cash Records"){
+            const updated=updateCashRecords();
+            html=`<h2>Cash Records</h2><table>
             <tr><th>Account</th><th>Balance</th></tr>
             <tr><td>Cash</td><td>₱${updated.cash}</td></tr>
-            <tr><td>GCash</td><td>₱${updated.gcash}</td></tr>
             <tr><td>BPI</td><td>₱${updated.bpi}</td></tr>
+            <tr><td>GCash</td><td>₱${updated.gcash}</td></tr>
             <tr><td>Gotyme</td><td>₱${updated.gotyme}</td></tr>
             <tr><td>Maya</td><td>₱${updated.maya}</td></tr>
             <tr><td>Landbank</td><td>₱${updated.landbank}</td></tr>
-            <tr><td><strong>Total Cash on Hand</strong></td><td>₱${calculateTotalCashOnHand()}</td></tr>
+            <tr><td><strong>Total Cash On Hand</strong></td><td>₱${calculateTotalCashOnHand()}</td></tr>
             </table>`;
-        }else if(menuItem==="Map"){
-            html=`<h2>Our Location</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3857.163892364542!2d120.83534147457674!3d14.816057071766437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ab98fa4b41a7%3A0xda1b0d4442efe2c8!2sEasyDrive%20by%20Micah%20-%20Car%20Rental%20Services!5e0!3m2!1sen!2sph!4v1755188772649!5m2!1sen!2sph" width="100%" height="450"
+        }
+        else if(menuItem==="Map"){
+            html=`<h2>Our Location</h2><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3857.163892364542!2d120.83534147457674!3d14.816057071766437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ab98fa4b41a7%3A0xda1b0d4442efe2c8!2sEasyDrive%20by%20Micah%20-%20Car%20Rental%20Services!5e0!3m2!1sen!2sph!4v1755188772649!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>`;
+        }
+        else if(menuItem==="Facebook"){
+            html=`<h2>Facebook Page</h2><a href="https://www.facebook.com/share/14FRBRZUrh5/" target="_blank">Open Facebook Page</a>`;
+        }
+        else if(menuItem==="TikTok"){
+            html=`<h2>TikTok Page</h2><a href="https://www.tiktok.com/@easydrive.by.micah" target="_blank">Open TikTok Profile</a>`;
+        }
+    } else {
+        html=`<h2>${menuItem}</h2><p>Content for ${menuItem}</p>`;
+    }
+    mainContent.innerHTML=html;
+}
+</script>
+
+</body>
+</html>
